src/components/cart-dropdown/cart-dropdown.styles.scss
.cart-dropdown {
  position: absolute;
  max-width: 300px;
  width: 100%;
  height: 340px;
  display: flex;
  flex-direction: column;
  padding: 20px;
  border: 1px solid black;
  background-color: white;
  top: 90px;
  right: 40px;
  z-index: 5;

  .cart-items {
    height: 240px;
    display: flex;
    flex-direction: column;
    overflow: scroll;
  }

  button {
    margin-top: auto;
  }
}

